Fix left-alignment issue with datatable, so that column headers and data are aligned on the left.
Setting the left-padding for data-table-cell to the same value was
causing problems in some cases, due the extra padding in the
data-table-cells that wrapped arrays and objects. The fix involved
changing the directive to use a non-padding style for cells containing
arrays and objects. Also, there was a second alignment issue for some
column headers because their caret span had not been moved to the
right of the label.

Reviewed-on: http://review.couchbase.org/86532
Tested-by: Eben Haber <eben@couchbase.com>

--- a/query-ui/ui-current/data_display/qw-json-tree-table.css
+++ b/query-ui/ui-current/data_display/qw-json-tree-table.css
@@ -207,7 +207,17 @@ td.ajtd-type-array {
   vertical-align: top;
   white-space: normal;
   font-size: .75rem; /* same as the header font for alignment HACK */
-  padding: .1rem;
+  padding-left: .25rem;
+}
+
+.data-table-cell-special { /* used for cells containing objects or arrays */
+  display: inline-block;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  vertical-align: top;
+  white-space: normal;
+  font-size: .75rem; /* same as the header font for alignment HACK */
+  padding: 0rem;
 }
 
 .data-table-special-value {
